--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,10 +1,10 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?avnunm#1" target="_blank">首页</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/1?htxeqikdp" target="_blank">动态网</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/2?scmbocodf" target="_blank">大纪元</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/4?tmrsp" target="_blank">看中国</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/pHh5q?aqshqb" target="_blank">新生网</a> | <a href="https://d1jex6syje0yji.cloudfront.net/tktpt?itwnzey" target="_blank">阿波罗网</a> | <a href="https://doqmgyop4u892.cloudfront.net/Mjpvu?okurn" target="_blank">干净世界</a> | <a href="https://d3gus727acem18.cloudfront.net/10?epnove" target="_blank">退党服务</a> | <a href="https://dnuodzs8nln8v.cloudfront.net/Rffqf?habmcofvy" target="_blank">明慧广播</a> | <a href="https://dfxrfb9070id6.cloudfront.net/nw9Vn?ienajava" target="_blank">传奇时代</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/AF9AG?csykcc" target="_blank">新境界影视</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/zqMQA?kmlwrzej" target="_blank">文昭谈论</a> | <a href="https://d14a0yccee2yym.cloudfront.net/7?ifszkahxg" target="_blank">明慧</a></p><p><a href="https://d3qwx9e7uaergm.cloudfront.net/9?vaobqdvub" target="_blank">大法</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/3?bhmnghgc" target="_blank">新唐人</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/obAhT?pdniyf" target="_blank">人民报</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/xXNHu?uvdjnpt" target="_blank">放光明</a> | <a href="https://d282b678eon3c.cloudfront.net/5?oguyuhfa" target="_blank">新纪元</a> | <a href="https://d2torrlf4djx10.cloudfront.net/6?uhbgn" target="_blank">希望之声</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/11?nlqpg" target="_blank">无界网络</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/Pueji?mpmbocji" target="_blank">追查国际</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/16?ecbqko" target="_blank">明慧之窗</a> | <a href="https://d3ohms0ydcz20j.cloudfront.net/LdvzZ?ibherksd" target="_blank">细语人生</a> | <a href="https://d27hok1oawuvj8.cloudfront.net/fBn3r?xphdstam" target="_blank">新世纪影视</a> | <a href="https://dhw62qyyxrv4n.cloudfront.net/PUWMb?awrlh" target="_blank">江峰时刻</a> | <a href="https://djwddd4nnr0na.cloudfront.net/8?trcxd" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ulggca#1" target="_blank">首页</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/1?kttkogxa" target="_blank">动态网</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/2?iqzjpxy" target="_blank">大纪元</a> | <a href="https://djwddd4nnr0na.cloudfront.net/4?oihidos" target="_blank">看中国</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/pHh5q?wfacrmeai" target="_blank">新生网</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/tktpt?xciscg" target="_blank">阿波罗网</a> | <a href="https://d1u99il8548gs4.cloudfront.net/Mjpvu?kaqxdj" target="_blank">干净世界</a> | <a href="https://d1lulvfep8g527.cloudfront.net/10?hvanrp" target="_blank">退党服务</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/Rffqf?lmjekux" target="_blank">明慧广播</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/nw9Vn?yvgctjutm" target="_blank">传奇时代</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/AF9AG?inznzh" target="_blank">新境界影视</a> | <a href="https://doh73o6c3dnba.cloudfront.net/zqMQA?xcorlrmyc" target="_blank">文昭谈论</a> | <a href="https://dme0bxbvomkno.cloudfront.net/7?dxphl" target="_blank">明慧</a></p><p><a href="https://dep6yudto3kbo.cloudfront.net/9?wvxprch" target="_blank">大法</a> | <a href="https://dycmgeziwp90b.cloudfront.net/3?lohvl" target="_blank">新唐人</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/obAhT?rjcezjf" target="_blank">人民报</a> | <a href="https://d23a1u4ljgwmvy.cloudfront.net/xXNHu?gvsbpgh" target="_blank">放光明</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/5?qhula" target="_blank">新纪元</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/6?esmmyy" target="_blank">希望之声</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/11?ordicm" target="_blank">无界网络</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/Pueji?zsmxc" target="_blank">追查国际</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/16?ktkbfepfv" target="_blank">明慧之窗</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/LdvzZ?stkmpbk" target="_blank">细语人生</a> | <a href="https://divmj5v44rbg.cloudfront.net/fBn3r?vrgoakjnb" target="_blank">新世纪影视</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/PUWMb?iiuuud" target="_blank">江峰时刻</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/8?crtirctb" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290623-Untitled-design-13-320x200.jpg"><p align="center">【直播】川普遇刺最新进展 记者连线</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1" title="【直播】川普遇刺最新进展 记者连线""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290623-Untitled-design-13-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287991.md#1" title="Costco礼品卡很超值 但四缺陷易被忽略""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/12/id13422008-shutterstock_1320536255-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290116.md#1" title="新获知447名法轮功学员遭中共非法判刑""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288955-LDB2340-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290118.md#1" title="【更新】枪手身份曝光 FBI定调暗杀未遂""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290154-GettyImages-2161923146-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290194.md#1" title="川普突遭枪击 目击者：枪手在爬屋顶""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290262-2407132111311528-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290116.md#1" title="新获知447名法轮功学员遭中共非法判刑""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288955-LDB2340-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290396.md#1" title="大陆光伏全行业陷入亏损 专家分析根本问题""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/01/id13543996-GettyImages-1237594363-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290250.md#1" title="拜登在枪击事件后与川普通话 提前返白宫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290263-AFP__20240714__363Y8F7__v2__HighRes__PresidentialElection-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290432.md#1" title="庆独立日精神 新世纪主办“美丽的美利坚”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290491-2407140422581528-320x200.jpg">&nbsp;</a>
@@ -13,15 +13,15 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290069.md#1" title="【菁英论坛】外逃厅官爆 退休官员逾半被抓""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290123-1200-x-800-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290099.md#1" title="风雨17载? 多伦多太古广场真相点的故事""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290128-2c011bb851c80464d340a7b4-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290397.md#1">组图：“美丽的美利坚”庆典 纽约上州登场</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287991.md#1">Costco礼品卡很超值 但四缺陷易被忽略</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290116.md#1">新获知447名法轮功学员遭中共非法判刑</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290118.md#1">【更新】枪手身份曝光 FBI定调暗杀未遂</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290194.md#1">川普突遭枪击 目击者：枪手在爬屋顶</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1">反迫害25周年 法轮功学员纽约上州集会</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290116.md#1">新获知447名法轮功学员遭中共非法判刑</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290447.md#1">川普集会枪击案 FBI：枪手为20岁宾州男子</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289354.md#1">中共太子党动向密集曝光 胡耀邦孙女任新职</a><br>
@@ -114,7 +114,7 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 433,182,052 人
+!共 433,183,533 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290407-2407131413552483-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1">反迫害25周年 法轮功学员纽约上州集会</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289988.md#1">租客朋友暂住未报官 深圳房东遭罚 网民吃惊</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289642.md#1">走线华人参加法轮功大游行：我要忏悔</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290161-0871803e3e4904d28f2888df24f481ef-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289709.md#1">金华首富女婿叹大陆前沿企业也内卷</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289644.md#1">中国电商价格战激烈 卖家难以维持生计</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290013.md#1">台海巡队强化淡水河防务 遏止中共快艇闯入</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289769.md#1">北京突降暴雨 一秒白天变黑夜 连发六预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288993.md#1">女生北大毕业后 又考入上海交大 引发关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288843.md#1">谐星傅子明猝逝 沪语歌《做人难》曾爆红上海滩</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288365.md#1">重庆河水倒灌村民被困 三峡水库今年首度泄洪</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290228-7296066ff825d0fad4e91ba4e2c7f6d4-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
